# src/main/kotlin/io/beyonnex/anagram/AnagramHandlerFunctions.kt
@@ -9,8 +9,17 @@ import org.springframework.web.reactive.function.server.bodyValueAndAwait
 @Component
 class AnagramHandlerFunctions {
     suspend fun checkForAnagram(serverRequest: ServerRequest): ServerResponse =
+        checkForAnagram(serverRequest) { request -> request.possibleAnagram isAnagramOf request.source }
+
+    suspend fun checkForAnagramVerifiedBySorting(serverRequest: ServerRequest): ServerResponse =
+        checkForAnagram(serverRequest) { request -> request.possibleAnagram isAnagramOfVerifiedBySorting request.source }
+
+    private suspend fun checkForAnagram(
+        serverRequest: ServerRequest,
+        checkFunction: (AnagramCheckRequest) -> Boolean
+    ): ServerResponse =
         serverRequest.awaitBody(AnagramCheckRequest::class)
-            .let { request -> request.possibleAnagram isAnagramOf request.source }
+            .let { request -> checkFunction(request) }
             .let { AnagramCheckResponse(it) }
             .let {
                 ServerResponse
